--- a/src/main/mainScreen.fxml
+++ b/src/main/mainScreen.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="screens.MainScreen"
+            fx:controller="main.MainScreenController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
